syntax = "proto3";

package api.server;

// import "google/api/http.proto";
import "google/protobuf/timestamp.proto";

option go_package = "microservices-template-2024/api/server;server";
option java_multiple_files = true;
option java_package = "api.server";

service Users {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply) {
    // option (google.api.http) = {
    //   get: "/users/{id}"
    // };
  };
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password_hash = 4;
  string first_name = 5;
  string last_name = 6;
  string phone_number = 7;
  string avatar_url = 8;
  repeated string roles = 9;
  bool email_verified = 10;
  bool phone_verified = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  google.protobuf.Timestamp last_login_at = 14;
  string timezone = 15;
  string locale = 16;
  map<string, string> metadata = 17;
}

message CreateUserRequest {
	User user = 1;
}
message CreateUserReply {
	bool ok = 1;
}

message UpdateUserRequest {
	User user = 1;
}
message UpdateUserReply {
	bool ok = 1;
}

message DeleteUserRequest {
	string id = 1;
}
message DeleteUserReply {
	bool ok = 1;
}

message GetUserRequest {
	optional string id = 1;
	optional string name = 2;
	optional string email = 3;
}
message GetUserReply {
	User user = 1;
}

message ListUserRequest {}
message ListUserReply {
	repeated User users = 1;
	bool ok = 2;
}